objects/HealthCloudGA__EhrRelatedPerson__c.object
<CustomObject>
    <description>Information about a person that is involved in the care for a patient, but who is not the target of healthcare, nor has a formal responsibility in the care process.</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual account which represents the patient in force.com</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related People</relationshipLabel>
        <relationshipName>RelatedPeople</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1City__c</fullName>
        <label>Address1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Country__c</fullName>
        <label>Address1 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1EndDate__c</fullName>
        <label>Address1 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Line1__c</fullName>
        <label>Address1 Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Line2__c</fullName>
        <label>Address1 Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1PostalCode__c</fullName>
        <label>Address1 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1StartDate__c</fullName>
        <label>Address1 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1State__c</fullName>
        <label>Address1 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Text__c</fullName>
        <label>Address1 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address1Use__c</fullName>
        <label>Address1 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2City__c</fullName>
        <label>Address2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Country__c</fullName>
        <label>Address2 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2EndDate__c</fullName>
        <label>Address2 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Line1__c</fullName>
        <label>Address2 Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2PostalCode__c</fullName>
        <label>Address2 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2StartDate__c</fullName>
        <label>Address2 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2State__c</fullName>
        <label>Address2 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Text__c</fullName>
        <label>Address2 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address2Use__c</fullName>
        <label>Address2 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3City__c</fullName>
        <label>Address3 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3Country__c</fullName>
        <label>Address3 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3EndDate__c</fullName>
        <label>Address3 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3PostalCode__c</fullName>
        <label>Address3 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3StartDate__c</fullName>
        <label>Address3 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3State__c</fullName>
        <label>Address3 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3Text__c</fullName>
        <label>Address3 Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Address3Use__c</fullName>
        <label>Address3 Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BirthDate__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CalculatedName__c</fullName>
        <description>if  Name is null or Blank it is populated with GivenName1__c + FamilyName1__c else it is populated with Name</description>
        <formula>IF(ISBLANK(HealthCloudGA__NameFull__c), HealthCloudGA__GivenName1__c +&apos; &apos;+ HealthCloudGA__FamilyName1__c , HealthCloudGA__NameFull__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if  Name is null or Blank it is populated with GivenName1__c + FamilyName1__c else it is populated with Name</inlineHelpText>
        <label>Calculated Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FamilyName1__c</fullName>
        <label>FamilyName1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FamilyName2__c</fullName>
        <label>FamilyName2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FamilyName3__c</fullName>
        <label>FamilyName3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GivenName1__c</fullName>
        <label>GivenName1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GivenName2__c</fullName>
        <label>GivenName2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__GivenName3__c</fullName>
        <label>GivenName3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>IF (Relationship = agent OR guardian OR guarantor) AND (Period Start &gt;= TODAY OR NULL) AND (Period End &lt;=TODAY OR NULL)  return true else return false.</description>
        <formula>IF( AND(  OR(  UPPER(HealthCloudGA__Relationship__c) = &apos;AGENT&apos;, UPPER(HealthCloudGA__Relationship__c) = &apos;GUARDIAN&apos;, UPPER(HealthCloudGA__Relationship__c) = &apos;GUARANTOR&apos; ) ,OR( DATEVALUE(HealthCloudGA__PeriodStart__c) &lt;= TODAY() ,ISBLANK(HealthCloudGA__PeriodStart__c)),OR( DATEVALUE(HealthCloudGA__PeriodEnd__c) &gt;= TODAY() ,ISBLANK(HealthCloudGA__PeriodEnd__c))) 
                        , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Language1__c</fullName>
        <label>Language1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Language2__c</fullName>
        <label>Language2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Language3__c</fullName>
        <label>Language3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NameFull__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>Related People</relationshipLabel>
        <relationshipName>RelatedPeople</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PeriodEnd__c</fullName>
        <label>PeriodEnd</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PeriodStart__c</fullName>
        <label>PeriodStart</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PhotoUrl__c</fullName>
        <label>Photo URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrefixName1__c</fullName>
        <label>PrefixName1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrefixName2__c</fullName>
        <label>PrefixName2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrefixName3__c</fullName>
        <label>PrefixName3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Relationship__c</fullName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Role255__c</fullName>
        <label>Role 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Role__c</fullName>
        <label>Role</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty255__c</fullName>
        <label>Specialty 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty__c</fullName>
        <label>Specialty</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SuffixName1__c</fullName>
        <label>SuffixName1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SuffixName2__c</fullName>
        <label>SuffixName2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SuffixName3__c</fullName>
        <label>SuffixName3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1PeriodEndDate__c</fullName>
        <description>End of Period Time period when the contact was/is in use</description>
        <label>Telecom1 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1PeriodStartDate__c</fullName>
        <description>Start of Period Time period when the contact was/is in use</description>
        <label>Telecom1 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1System__c</fullName>
        <description>phone | fax | email | url</description>
        <label>Telecom1 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1Use__c</fullName>
        <description>home | work | temp | old | mobile</description>
        <label>Telecom1Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom1Value__c</fullName>
        <description>The actual contact details</description>
        <label>Telecom1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2PeriodEndDate__c</fullName>
        <description>End of Period Time period when the contact was/is in use</description>
        <label>Telecom2 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2PeriodStartDate__c</fullName>
        <description>Start of Period Time period when the contact was/is in use</description>
        <label>Telecom2 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2System__c</fullName>
        <description>phone | fax | email | url</description>
        <label>Telecom2 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2Use__c</fullName>
        <description>home | work | temp | old | mobile</description>
        <label>Telecom2Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom2Value__c</fullName>
        <description>The actual contact details</description>
        <label>Telecom2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3PeriodEndDate__c</fullName>
        <description>End of Period Time period when the contact was/is in use</description>
        <label>Telecom3 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3PeriodStartDate__c</fullName>
        <description>Start of Period Time period when the contact was/is in use</description>
        <label>Telecom3 Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3System__c</fullName>
        <description>phone | fax | email | url</description>
        <label>Telecom3 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3Use__c</fullName>
        <description>home | work | temp | old | mobile</description>
        <label>Telecom3Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Telecom3Value__c</fullName>
        <description>The actual contact details</description>
        <label>Telecom3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Related Person</label>
    <nameField>
        <displayFormat>Pers-{0}</displayFormat>
        <label>EHR Related Person ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Related People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>